--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,39 @@
-header {
-	margin: 50px auto;
+body {
+  margin: 0;
+}
 
-	&.main-header {
-		background: blue;
-	}
+@font-face {
+  font-family: 'SourceSans';
+  src: url('./fonts/sourcesanspro-light.eot');
+  src: url('./fonts/sourcesanspro-light.woff') format('woff'), url('./fonts/sourcesanspro-light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'SourceSans';
+  src: url('./fonts/sourcesanspro-regular.eot');
+  src: url('./fonts/sourcesanspro-regular.woff') format('woff'), url('./fonts/sourcesanspro-regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'SourceSans';
+  src: url('./fonts/sourcesanspro-semibold.eot');
+  src: url('./fonts/sourcesanspro-semibold.woff') format('woff'), url('./fonts/sourcesanspro-semibold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'SourceSans';
+  src: url('./fonts/sourcesanspro-bold.eot');
+  src: url('./fonts/sourcesanspro-bold.woff') format('woff'), url('./fonts/sourcesanspro-bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
 }
