--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,4 @@
-header {
+.main-header {
 	font-family: SourceSans;
 	height: 333px;
 	background: url(./assets/header.jpg);
@@ -7,5 +7,6 @@ header {
 	.title {
 		font-size: 25px;
 		font-weight: 300;
+		margin: 0;
 	}
 }
