--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,10 @@ body {
   margin: 0;
 }
 
+body * {
+  box-sizing: border-box;
+}
+
 @font-face {
   font-family: 'SourceSans';
   src: url('./fonts/sourcesanspro-light.eot');
