--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,8 +1,8 @@
 footer {
 	font-family: SourceSans;
-	height: 100px;
+	height: 75px;
 	padding: 20px 0;
 	margin-top: 75px;
-	background: black;
+	background-color: #424242;
 	color: white;
 }
