--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -1,5 +1,36 @@
 .movie-card {
   width: 20%;
-  min-height: 200px;
+  min-height: 300px;
   padding: 20px;
+  color: #888;
+  cursor: pointer;
+  transition: .3s;
+
+  &:hover {
+    transform: scale(1.1);
+    box-shadow: 3px 3px 10px #424242;
+  }
+
+  .movie-image {
+    height: 230px;
+    background-color: #f65261;
+    margin-bottom: 15px;
+  }
+
+  .movie-title {
+    padding-bottom: 10px;
+    font-size: 21px;
+    font-weight: 600;
+  }
+
+  .movie-category {
+    color: #777;
+  }
+  
+  .movie-year {
+    float: right;
+    padding: 5px;
+    border: 1px solid #555;
+    border-radius: 3px;
+  }
 }
