--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,15 @@
 body {
   margin: 0;
+  background-color: #232323;
 }
 
 body * {
   box-sizing: border-box;
+}
+
+p {
+  padding: 0;
+  margin: 0;
 }
 
 @font-face {
