--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,8 +1,10 @@
+@import '../../variables.scss';
+
 footer {
 	font-family: SourceSans;
 	height: 75px;
 	padding: 20px 0;
 	margin-top: 75px;
-	background-color: #424242;
+	background-color: $secondaryTextColor;
 	color: white;
 }
