--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,8 @@
+@import 'variables.scss';
+
 body {
   margin: 0;
-  background-color: #232323;
+  background-color: $backgroundColor;
 }
 
 body * {
