--- a/src/components/SearchInput/SearchInput.scss
+++ b/src/components/SearchInput/SearchInput.scss
@@ -1,3 +1,5 @@
+@import '~/src/variables.scss';
+
 .search-input {
   width: 300px;
   height: 36px;
@@ -6,4 +8,15 @@
   margin-right: 20px;
   border: none;
   outline: none;
+}
+
+.search-button {
+  padding: 10px 50px;
+  font-size: 16px;
+  color: white;
+  background: $mainColor;
+  outline: none;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
 }
