--- a/src/components/Common/ActionsIcon/ActionsIcon.scss
+++ b/src/components/Common/ActionsIcon/ActionsIcon.scss
@@ -1,17 +1,20 @@
 .actions-icon {
+  display: none;
   width: 30px;
   height: 30px;
   position: relative;
   border-radius: 50%;
   border: 1px solid gray;
 
+  &.visible {
+    display: block;
+  }
+
   .actions {
     position: absolute;
     display: none;
-  }
 
-  &.opened {
-    .actions {
+    &.visible {
       display: flex;
       flex-direction: column;
     }
