--- a/src/components/Common/SearchInput/SearchInput.scss
+++ b/src/components/Common/SearchInput/SearchInput.scss
@@ -2,21 +2,15 @@
 
 .search-input {
   width: 300px;
-  height: 36px;
+  height: 40px;
   padding: 5px;
   border-radius: 3px;
   margin-right: 20px;
+  vertical-align: top;
   border: none;
   outline: none;
-}
 
-.search-button {
-  padding: 10px 50px;
-  font-size: 16px;
-  color: white;
-  background: $mainColor;
-  outline: none;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
+  & + .search-button {
+    display: inline-block;
+  }
 }
