--- a/src/components/Common/Header/Header.scss
+++ b/src/components/Common/Header/Header.scss
@@ -1,8 +1,11 @@
-.main-header {
+header {
   font-family: SourceSans;
   height: 333px;
-  background: url(./assets/header.jpg);
   color: white;
+
+  &.main-header {
+    background: url(./assets/header.jpg);
+  }
 
   .title {
     font-size: 25px;
