task-5: update movie details routing

--- a/src/components/Movie/MovieCard/MovieCard.scss
+++ b/src/components/Movie/MovieCard/MovieCard.scss
@@ -13,6 +13,14 @@
   &:hover {
     transform: scale(1.1);
     box-shadow: 3px 3px 10px $secondaryTextColor;
+
+    .actions-container {
+      display: block;
+    }
+  }
+
+  .actions-container {
+    display: none;
   }
 
   .movie-image {
