--- a/src/components/Movie/MovieCard/MovieCard.scss
+++ b/src/components/Movie/MovieCard/MovieCard.scss
@@ -12,7 +12,7 @@
 
   &:hover {
     transform: scale(1.1);
-    box-shadow: 3px 3px 10px $secondaryTextColor;
+    box-shadow: 0 10px 16px -5px $secondaryTextColor;
 
     .actions-container {
       display: block;
@@ -24,9 +24,12 @@
   }
 
   .movie-image {
+    width: 100%;
     height: 230px;
     background-color: $mainColor;
     margin-bottom: 15px;
+    object-fit: cover;
+    object-position: center;
   }
 
   .movie-title {
@@ -37,6 +40,7 @@
 
   .movie-category {
     color: $mainTextColor;
+    font-size: 15px;
   }
   
   .movie-year {
