--- a/src/components/Movie/MoviesCategories/MoviesCategories.scss
+++ b/src/components/Movie/MoviesCategories/MoviesCategories.scss
@@ -1,3 +1,5 @@
+@import '~/src/variables.scss';
+
 .categories-wrapper {
   display: flex;
   margin: 20px 0;
@@ -7,5 +9,12 @@
     color: white;
     text-transform: uppercase;
     cursor: pointer;
+
+    &[data-selected="true"] {
+      color: $mainColor;
+      font-weight: bold;
+      pointer-events: none;
+      cursor: default;
+    }
   }
 }
