--- a/src/components/Common/Footer/Footer.scss
+++ b/src/components/Common/Footer/Footer.scss
@@ -4,7 +4,7 @@ footer {
 	font-family: SourceSans;
 	height: 75px;
 	padding: 20px 0;
-	margin-top: 75px;
+	margin-top: auto;
 	background-color: $secondaryTextColor;
 	color: white;
 }
