--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,12 @@ body * {
   font-family: 'SourceSans';
 }
 
+#app {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 p {
   padding: 0;
   margin: 0;
