--- a/src/components/Common/ActionsIcon/ActionsIcon.module.scss
+++ b/src/components/Common/ActionsIcon/ActionsIcon.module.scss
@@ -1,3 +1,5 @@
+@import '~/src/variables.scss';
+
 .actions-icon {
   width: 30px;
   height: 30px;
@@ -6,8 +8,11 @@
   border: 1px solid gray;
 
   .actions {
-    position: absolute;
     display: none;
+    position: absolute;
+    top: -1px;
+    right: -1px;
+    background: $backgroundColor;
 
     &.visible {
       display: flex;
