task-8: add basic components stories

--- a/src/components/Common/Button/Button.module.scss
+++ b/src/components/Common/Button/Button.module.scss
@@ -5,6 +5,7 @@
   padding: 10px 50px;
   font-size: 16px;
   color: white;
+  min-height: 40px;
   background: $mainColor;
   outline: none;
   border: none;
