--- a/src/components/Common/SearchInput/SearchInput.module.scss
+++ b/src/components/Common/SearchInput/SearchInput.module.scss
@@ -7,7 +7,7 @@
   border-radius: 3px;
   margin-right: 20px;
   vertical-align: top;
-  border: none;
+  border: 1px solid $mainTextColor;
   outline: none;
 
   & + .search-button {
